# meshio

./: README.md
source/: CMakeLists.txt  main.cc
source/meshio/: mio.hpp  mio_af_tokens.hpp  mio_endian.hpp  mio_exception.hpp  mio_file.hpp  mio_file_reader.hpp  mio_file_writer.hpp  mio_filetype.hpp  mio_mesh.hpp  mio_reader_af.hpp  mio_reader_stl.hpp  mio_reader_stl_ascii.hpp  mio_reader_stl_binary.hpp  mio_readers.hpp  mio_stl_tokens.hpp  mio_util.hpp  mio_writer_af.hpp  mio_writer_stl.hpp  mio_writer_stl_ascii.hpp  mio_writer_stl_binary.hpp  mio_writers.hpp
testfile/: monkey.bin.stl
