CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(meshio)

ADD_DEFINITIONS(-DTESTFILE_STL_BIN=\"${PROJECT_SOURCE_DIR}/../testfile/monkey.bin.stl\")
ADD_DEFINITIONS(-DTESTIO=\"${CMAKE_BINARY_DIR}\")

IF(CMAKE_COMPILER_IS_GNUXX)
  SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall ${CMAKE_CXX_FLAGS}" CACHE STRING "" FORCE)
ENDIF(CMAKE_COMPILER_IS_GNUXX)

SET(SOURCES main.cc)

ADD_EXECUTABLE(${PROJECT_NAME}_bin ${SOURCES})